# NovaScript

./: CMakeLists.txt  Lexer-And-Parser.cpp  Lexer.cpp  README.md  configure.py  main.ns  nova
Source/: Lexer.cpp  Lexer.h  Main.cpp  Parser.cpp  Parser.h
include/: parser.tab.h
src/: lex.yy.c  main.c  parser.tab.c  utils.c
utils/: lexer.l  parser.y
